Fixed issue #81, Alignment of table row and body

--- a/administrator/templates/khonsu/scss/blocks/_j-table.scss
+++ b/administrator/templates/khonsu/scss/blocks/_j-table.scss
@@ -225,7 +225,7 @@ table {
             }
             td {
                 border: 0;
-                padding: 15px 0;
+                padding: 15px 10px;
                 line-height: 1;
                 .btn {
                     line-height: 1;
